[package]
name = "ciyun-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.20.0"
tokio-tungstenite = "0.20.0"
tokio = {version = "1.32.0", features = ["full"]}
futures-util = "0.3.28"
futures-channel = "0.3.28"
rand = {version = "0.8.5"}
sqlx = {version = "0.7.1", features = ["runtime-tokio", "postgres"]}
